--- a/index.html
+++ b/index.html
@@ -140,38 +140,51 @@
             <h3 class="topic-section" id="services">My <span>Services</span></h3>
         </div>
         <div class="services-list">
-        <!--    <div class="service-card">
-                <div class="service-card-content">
-                    <div class="card-front">
-                        <i class="fa-solid fa-laptop-code" style="color: #ffffff;"></i>
-                        <h4 class="service-title">Graphic Design</h4>
-                        <p>Develop the visual identity of your business</p>
+            <div class="service-card">
+                <div class="face-front">
+                    <div class="content-wrap">
+                        <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
+                        <h4>Web Design</h4>
+                        <p>Connect with your users, Not just your Business</p>
                     </div>
-                    &lt;!&ndash;<div class="card-back">
-                        <h4>Graphic Design</h4>
-                        <p>Develop the visual identity of your business</p>
-                    </div>&ndash;&gt;
+                </div>
+                <div class="face-back">
+                    <div class="content-wrap">
+                        <h4>Web Design</h4>
+                        <p>Connect with your users, Not just your Business</p>
+                    </div>
                 </div>
             </div>
             <div class="service-card">
-                <div class="service-card-content">
-                    <div class="card-front">
-                        <i class="fa-solid fa-laptop-code" style="color: #ffffff;"></i>
-                        <h4 class="service-title">Graphic Design</h4>
-                        <p>Develop the visual identity of your business</p>
+                <div class="face-front">
+                    <div class="content-wrap">
+                        <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
+                        <h4>Development</h4>
+                        <p>Web develop the visual identity of your business</p>
                     </div>
-                    &lt;!&ndash;<div class="card-back">
-                        <h4>Graphic Design</h4>
-                        <p>Develop the visual identity of your business</p>
-                    </div>&ndash;&gt;
-                </div>
-            </div>-->
 
-            <div><i class="fa-solid fa-desktop" style="color: #ffffff;"></i><h4>Web Design</h4>
-                <p>Connect with your users, Not just your Business</p>
+                </div>
+                <div class="face-back">
+                    <div class="content-wrap">
+                        <h4>Development</h4>
+                        <p>Web develop the visual identity of your business</p>
+                    </div>
+                </div>
             </div>
-            <div><i class="fa-solid fa-desktop" style="color: #ffffff;"></i><h4>Development</h4>
-                <p>Web develop the visual identity of your business</p>
+            <div class="service-card">
+                <div class="face-front">
+                    <div class="content-wrap">
+                        <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
+                        <h4>Graphic Design</h4>
+                        <p>Connect with your users, Not just your Business</p>
+                    </div>
+                </div>
+                <div class="face-back">
+                    <div class="content-wrap">
+                        <h4>Web Design</h4>
+                        <p>Connect with your users, Not just your Business</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
