--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="project-container">
             <div class="project-card">
                 <h4>Pharmacy Management System</h4>
-                <img src="assets/images/Ag1_09.jpg">
+                <img src="assets/images/GST%20CAM%20939-10.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
             </div>
             <div class="project-card">
@@ -208,7 +208,7 @@
             </div>
             <div class="project-card">
                 <h4>Hostel Management System</h4>
-                <img src="assets/images/Ag1_09.jpg">
+                <img src="assets/images/rm330-pa-logo2-02.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
             </div>
         </div>
