--- a/assignments.html
+++ b/assignments.html
@@ -115,7 +115,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 4</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-04/index.html?_ijt=13lp04kuffnc4tgut8aofuktp7&_ij_reload=RELOAD_ON_SAVE">
+                    <a href="assignments/CSS/Cases/CASE-04/index.html">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -124,7 +124,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 5</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-05/index.html?_ijt=13lp04kuffnc4tgut8aofuktp7&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Cases/CASE-05/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -133,7 +133,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 6</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-06/index.html?_ijt=13lp04kuffnc4tgut8aofuktp7&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Cases/CASE-06/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -142,7 +142,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 7</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Transition/Case_01/index.html?_ijt=13lp04kuffnc4tgut8aofuktp7&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Transition/Case_01/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -151,7 +151,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 8</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Transition/Case_02/index.html?_ijt=13lp04kuffnc4tgut8aofuktp7&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Transition/Case_02/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -160,7 +160,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 9</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Transition/Case_03/index.html?_ijt=a85qu0i0gi88f3nk3drj1906gl&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Transition/Case_03/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -169,7 +169,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 10</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Animation/Case-01/index.html?_ijt=n999vft1e3ic8qslhn72eh3vln&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Animation/Case-01/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -178,7 +178,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 11</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Animation/Case-03/index.html?_ijt=n999vft1e3ic8qslhn72eh3vln&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Animation/Case-03/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
