--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 1</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-01/index.html?_ijt=rbi9tmg4fekodsqfd558h5h7ab&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Cases/CASE-01/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -238,7 +238,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 2</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-02/index.html?_ijt=vpbf21dkon8802jeh337p2ls5u&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Cases/CASE-02/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -247,7 +247,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 3</h4>
-                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-03/index.html?_ijt=vpbf21dkon8802jeh337p2ls5u&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                    <a href="assignments/CSS/Cases/CASE-03/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
