--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </a>
             </div>
             <div class="status">
-                <h3>I am a<br><span>Front-End<br>Developer</span></h3>
+                <h3>I am a<br><span>Front-End Developer</span></h3>
             </div>
             <div class="line"></div>
         </div>
