--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <div class="assigment-layer">
                     <h4>Assignment 1</h4>
                     <a href="assignments/CSS/Cases/CASE-01/index.html" target="_blank">
-                        <img src="assets/images/icons/expand-arrows.png">
+                        <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
                     </a>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                 <div class="assigment-layer">
                     <h4>Assignment 2</h4>
                     <a href="assignments/CSS/Cases/CASE-02/index.html" target="_blank">
-                        <img src="assets/images/icons/expand-arrows.png">
+                        <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
                     </a>
                 </div>
             </div>
@@ -253,7 +253,7 @@
                 <div class="assigment-layer">
                     <h4>Assignment 3</h4>
                     <a href="assignments/CSS/Cases/CASE-03/index.html" target="_blank">
-                        <img src="assets/images/icons/expand-arrows.png">
+                        <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
                     </a>
                 </div>
             </div>
