--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Anuki Dilara-MyPortfolio</title>
     <meta name="author" content="Anuki Dilara">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=3 minimum-scale=1 user-scalable=no">
     <link rel="stylesheet" href="assets/style.css">
     <!--<link rel="stylesheet" href="assets/font-awsome/css/all.min.css">-->
     <link rel="stylesheet" href="assets/normalize.css">
@@ -77,19 +78,31 @@
             <h3 class="topic-section" id="about">About <span>Me</span></h3>
         </div>
 
-        <div class="about-container">
-            <div id=#about-image>
-                <img src="assets/images/aboutImage.png" alt="anuki">
-            </div>
+        <section class="details">
+            <article class="article">
+                <!--My Photo-->
+                <div class="about-image">
+                    <!--My Photo-->
+                </div>
 
-            <h3>Hi, I am Anuki Dilara</h3>
-            <p>
-                I am UI/UX designer.I’m currently studying Graduate Diploma in Software Engineering (GDSE) in Institute of Software Engineering (IJSE). I,m currently working on Web Designing.
-                And I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.
-            </p>
+                <section class="about-description">
+                    <!-- My Details -->
+                    <h2>Hi There, I'm Anuki Dilara</h2>
+                    <p>I am tyring to be a UI/UX designer.I’m currently studying Graduate Diploma in Software Engineering (GDSE) in Institute of Software Engineering (IJSE). I,m currently working on Web Designing.
+                        And I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
 
-            <button>Download CV</button>
-        </div>
+                    <p>.I would be pleased to serve organizations ready to utilize my skills, creative energy, and
+                        initiative. It is extremely rewarding and it's more enjoyable when I'm coding also I am willing
+                        to learn new technologies and apply them to solve complex problems.</p>
+
+                    <button>Download CV
+                        <a href="./assets/pdf/DILSHAN_DEKUMPITIYA_CV.pdf" target="_blank">
+                            <i class="fa-solid fa-download"></i>
+                        </a>
+                    </button>
+                </section>
+            </article>
+        </section>
 
     </section>
 
