--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p>I am tyring to be a UI/UX designer.I’m currently studying Graduate Diploma in Software Engineering (GDSE) in Institute of Software Engineering (IJSE). I,m currently working on Web Designing.
                         And I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
 
-                    <p>.I would be pleased to serve organizations ready to utilize my skills, creative energy, and
+                    <p>I would be pleased to serve organizations ready to utilize my skills, creative energy, and
                         initiative. It is extremely rewarding and it's more enjoyable when I'm coding also I am willing
                         to learn new technologies and apply them to solve complex problems.</p>
 
