--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                 </a>
             </div>
             <div class="status">
-                <h3>I am a<br><span>Front-End Developer</span></h3>
+                <h3>I am a<br><span>Front-End Developer</span>
+                    <div class="line"></div>
+                </h3>
             </div>
-            <div class="line"></div>
+
         </div>
         <div class="up-arrow">
             <a href="index.html"><i class="fa-solid fa-circle-up" style="color: #FF014F;"></i></a>
@@ -247,7 +249,7 @@
                 <img src="assets/images/assigment-img/css-case-1.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 1</h4>
-                    <a href="assignments/CSS/Cases/CASE-01/index.html" target="_blank">
+                    <a href="assignments/CSS/CSS/CASE-01/index.html" target="_blank">
                         <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
                     </a>
                 </div>
@@ -256,7 +258,7 @@
                 <img src="assets/images/assigment-img/css-case-2.gif"/>
                 <div class="assigment-layer">
                     <h4>Assignment 2</h4>
-                    <a href="assignments/CSS/Cases/CASE-02/index.html" target="_blank">
+                    <a href="assignments/CSS/CSS/CASE-02/index.html" target="_blank">
                         <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
                     </a>
                 </div>
@@ -265,7 +267,7 @@
                 <img src="assets/images/assigment-img/css-cae-3.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 3</h4>
-                    <a href="assignments/CSS/Cases/CASE-03/index.html" target="_blank">
+                    <a href="assignments/CSS/CSS/CASE-03/index.html" target="_blank">
                         <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
                     </a>
                 </div>
