--- a/index.html
+++ b/index.html
@@ -303,19 +303,20 @@
     </section>
 </main>-->
 
-
     <section class="contact">
         <div class="shadow-topic">
             <h1>Contact</h1>
             <h3 class="topic-section" id="contact">Contact <span>Me</span></h3>
         </div>
-        <div class="contact-container">
-            <div class="social-media-container">
+
+        <section class="contact-container">
+            <div class="detail-container">
                 <div><img src="assets/images/icons/telephone%20(1).png"><h5>+94714666422</h5></div>
                 <div><img src="assets/images/icons/email%20(2).png"><h5>anukidilara002@gmail.com</h5></div>
                 <div><img src="assets/images/icons/location%20(1).png"></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
-            <div class="message-section">
+
+            <div class="contact-form">
                 <form action="anukidilara002@gmail.com" target="_blank" method="post">
                     <input type="text" id="name" placeholder="Your name"><br>
                     <input type="email" id="email" placeholder="Your email"><br>
@@ -323,12 +324,9 @@
                     <button>Send Message</button>
                 </form>
             </div>
-        </div>
+        </section>
     </section>
-
-    <!--<footer class="footer">
-        <center>Anuki Dilara</center>
-    </footer>-->
+    <footer>Anuki Dilara@All Rights are Reserved</footer>
 </main>
 
 
