--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                     <button>Download CV
                         <a href="./assets/pdf/DILSHAN_DEKUMPITIYA_CV.pdf" target="_blank">
-                            <i class="fa-solid fa-download"></i>
+                            <i class="fa-solid fa-download" style="color: white"></i>
                         </a>
                     </button>
                 </section>
