--- a/index.html
+++ b/index.html
@@ -158,78 +158,75 @@
             <h1>Services</h1>
             <h3 class="topic-section" id="services">My <span>Services</span></h3>
         </div>
-        <div class="services-list">
+        <div class="service-container">
             <div class="service-card">
-                <div class="face-front">
-                    <div class="content-wrap">
-                        <i class='bx bx-code-alt'></i>
-                       <!-- <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>-->
-                        <h4>Web Design</h4>
-                        <p>Connect with your users, Not just your Business</p>
-                    </div>
-                </div>
-                <div class="face-back">
-                    <div class="content-wrap">
-                        <h4>Web Design</h4>
-                        <p>Connect with your users, Not just your Business</p>
-                    </div>
-                </div>
+                <i class='bx bx-crop' ></i>
+                <h4>UI/UX Design</h4>
+                <p>Connect with your users, Not just your Business.</p>
             </div>
             <div class="service-card">
-                <div class="face-front">
-                    <div class="content-wrap">
-                        <!--<i class="fa-solid fa-desktop" style="color: #ffffff;"></i>--><i class='bx bx-crop' ></i>
-                        <h4>Development</h4>
-                        <p>Web develop the visual identity of your business</p>
-                    </div>
-
-                </div>
-                <div class="face-back">
-                    <div class="content-wrap">
-                        <h4>Development</h4>
-                        <p>Web develop the visual identity of your business</p>
-                    </div>
-                </div>
+                <i class='bx bx-crop' ></i>
+                <h4>Web Development</h4>
+                <p> Web develop the visual identity of your business.</p>
             </div>
             <div class="service-card">
-                <div class="face-front">
-                    <div class="content-wrap">
-                        <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
-                        <h4>Graphic Design</h4>
-                        <p>Connect with your users, Not just your Business</p>
-                    </div>
-                </div>
-                <div class="face-back">
-                    <div class="content-wrap">
-                        <h4>Web Design</h4>
-                        <p>Connect with your users, Not just your Business</p>
-                    </div>
-                </div>
+                <i class='bx bx-crop' ></i>
+                <h4>Graphic Design</h4>
+                <p>Connect with your users, Not just your Business.</p>
             </div>
         </div>
+
     </section>
 
     <section class="projects">
         <div class="shadow-topic">
-            <h1>Projects</h1>
-            <h3 class="topic-section" id="projects">My <span>Projects</span></h3>
+            <h1>Services</h1>
+            <h3 class="topic-section" id="projects">My <span>Services</span></h3>
         </div>
-        <div class="project-container">
+        <div class="project-list">
             <div class="project-card">
-                <h4>Pharmacy Management System</h4>
-                <img src="assets/images/GST%20CAM%20939-10.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
+                <div class="face-front">
+                    <div class="content-wrap">
+                        <img src="assets/images/GST%20CAM%20939-10.jpg">
+                        <!-- <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>-->
+                        <h4>Pharmacy Management System</h4>
+                    </div>
+                </div>
+                <div class="face-back">
+                    <div class="content-wrap">
+                        <h4>Web Design</h4>
+                        <p>Web develop the visual identity of your business</p>
+                    </div>
+                </div>
             </div>
             <div class="project-card">
-                <h4>Connect Four Game</h4>
-                <img src="assets/images/Ag1_09.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
+                <div class="face-front">
+                    <div class="content-wrap">
+                        <img src="assets/images/Ag1_09.jpg">
+                        <h4>Connect four Game</h4>
+                    </div>
 
+                </div>
+                <div class="face-back">
+                    <div class="content-wrap">
+                        <h4>Development</h4>
+                        <p>Web develop the visual identity of your business</p>
+                    </div>
+                </div>
             </div>
             <div class="project-card">
-                <h4>Hostel Management System</h4>
-                <img src="assets/images/rm330-pa-logo2-02.jpg">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
+                <div class="face-front">
+                    <div class="content-wrap">
+                        <img src="assets/images/rm330-pa-logo2-02.jpg">
+                        <h4>Hostel Management System</h4>
+                    </div>
+                </div>
+                <div class="face-back">
+                    <div class="content-wrap">
+                        <h4>Web Design</h4>
+                        <p>Connect with your users, Not just your Business</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="more-arrow">
