--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <section class="services">
         <div class="shadow-topic">
             <h1>Services</h1>
-            <h3 class="topic-section" id="services">My <span>Services</span></h3>
+            <h3 class="topic-section" id="services">My <span> Services</span></h3>
         </div>
         <div class="service-container">
             <div class="service-card">
@@ -165,12 +165,12 @@
                 <p>Connect with your users, Not just your Business.</p>
             </div>
             <div class="service-card">
-                <i class='bx bx-crop' ></i>
+                <i class='bx bx-code-alt'></i>
                 <h4>Web Development</h4>
                 <p> Web develop the visual identity of your business.</p>
             </div>
             <div class="service-card">
-                <i class='bx bx-crop' ></i>
+                <i class="fa-solid fa-desktop" style="color: #ffffff;"></i>
                 <h4>Graphic Design</h4>
                 <p>Connect with your users, Not just your Business.</p>
             </div>
@@ -181,7 +181,7 @@
     <section class="projects">
         <div class="shadow-topic">
             <h1>Services</h1>
-            <h3 class="topic-section" id="projects">My <span>Services</span></h3>
+            <h3 class="topic-section" id="projects">My <span> Projects</span></h3>
         </div>
         <div class="project-list">
             <div class="project-card">
@@ -323,7 +323,7 @@
             </div>
         </section>
     </section>
-    <footer>Anuki Dilara@All Rights are Reserved</footer>
+    <footer><span>Anuki Dilara</span>@All Rights are Reserved</footer>
 </main>
 
 
