--- a/index.html
+++ b/index.html
@@ -269,6 +269,33 @@
                     </a>
                 </div>
             </div>
+            <div class="assignment-card">
+                <img src="assets/images/assigment-img/case4.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 4</h4>
+                    <a href="assignments/CSS/CSS/CASE-04/index.html">
+                        <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="assignment-card">
+                <img src="assets/images/assigment-img/css-case-5.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 5</h4>
+                    <a href="assignments/CSS/CSS/CASE-05/index.html" target="_blank">
+                        <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="assignment-card">
+                <img src="assets/images/assigment-img/css-case-6.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 6</h4>
+                    <a href="assignments/CSS/CSS/CASE-06/index.html" target="_blank">
+                        <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+                    </a>
+                </div>
+            </div>
         </div>
         <a href="assignments.html">
             <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
