--- a/index.html
+++ b/index.html
@@ -141,13 +141,27 @@
             </div>
             <h4 class="skills-topic">Skills</h4>
             <div class="skills-container">
-                <img src="assets/images/skills/sql.png"/>
-                <img src="assets/images/skills/Python-logo-notext.svg.png"/>
-                <img src="assets/images/skills/JavaScript-logo.png"/>
-                <img src="assets/images/skills/java-logo.png"/>
-                <img src="assets/images/skills/ISO_C++_Logo.svg.png"/>
-                <img src="assets/images/skills/HTML5_logo_and_wordmark.svg.png"/>
-                <img src="assets/images/skills/css-logo.png" />
+                <div class="languages">
+                    <div><h4>Languages</h4></div>
+                    <div>
+                        <img src="assets/images/skills/sql.png"/>
+                        <img src="assets/images/skills/Python-logo-notext.svg.png"/>
+                        <img src="assets/images/skills/JavaScript-logo.png"/>
+                        <img src="assets/images/skills/java-logo.png"/>
+                        <img src="assets/images/skills/ISO_C++_Logo.svg.png"/>
+                        <img src="assets/images/skills/HTML5_logo_and_wordmark.svg.png"/>
+                        <img src="assets/images/skills/css-logo.png" />
+                    </div>
+                </div>
+                <div class="tools">
+                    <div><h4>Tools</h4></div>
+                    <div>
+                        <img src="assets/images/skills/intelij-logo.png" height="512" width="512"/>
+                        <img src="assets/images/skills/figma-logo.png" height="370" width="675"/>
+                        <img src="assets/images/skills/netbeans-logo.png" height="512" width="444"/>
+                        <img src="assets/images/skills/SceneBuilderLogo.webp" height="781" width="781"/>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -194,8 +208,11 @@
                 </div>
                 <div class="face-back">
                     <div class="content-wrap">
-                        <h4>Web Design</h4>
-                        <p>Web develop the visual identity of your business</p>
+                        <h4>Pharmacy Management System</h4>
+                        <p>Pharmacy Management System for Sithara Pharmacy</p>
+                        <a href="https://github.com/Anuki-Dilara/pharmacy-management-system-using-mvc-architechture" target="_blank">
+                            <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -211,6 +228,9 @@
                     <div class="content-wrap">
                         <h4>Development</h4>
                         <p>Web develop the visual identity of your business</p>
+                        <a href="assignments/CSS/CSS/CASE-05/index.html" target="_blank">
+                            <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -223,8 +243,11 @@
                 </div>
                 <div class="face-back">
                     <div class="content-wrap">
-                        <h4>Web Design</h4>
-                        <p>Connect with your users, Not just your Business</p>
+                        <h4>Hostel Management System</h4>
+                        <p>Hostel Management System for D24 hostel by Using Hibernate</p>
+                        <a href="https://github.com/Anuki-Dilara/d24-Hostel-Management-System-Using-Hibernate" target="_blank">
+                            <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+                        </a>
                     </div>
                 </div>
             </div>
