--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <h4 class="skills-topic">Skills</h4>
             <div class="skills-container">
                 <div class="languages">
-                    <div><h4>Languages</h4></div>
+                    <div><h4 class="skills-sub-topic">Languages</h4></div>
                     <div>
                         <img src="assets/images/skills/sql.png"/>
                         <img src="assets/images/skills/Python-logo-notext.svg.png"/>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="tools">
-                    <div><h4>Tools</h4></div>
+                    <div><h4 class="skills-sub-topic">Tools</h4></div>
                     <div>
                         <img src="assets/images/skills/intelij-logo.png" height="512" width="512"/>
                         <img src="assets/images/skills/figma-logo.png" height="370" width="675"/>
