--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="about">
         <div class="shadow-topic">
             <h1>About</h1>
-            <h3 class="topic-section" id="about">About <span>Me</span></h3>
+            <h3 class="topic-section" id="about">About<span>&nbsp;Me</span></h3>
         </div>
 
         <section class="details">
@@ -170,7 +170,7 @@
     <section class="services">
         <div class="shadow-topic">
             <h1>Services</h1>
-            <h3 class="topic-section" id="services">My <span> Services</span></h3>
+            <h3 class="topic-section" id="services">My<span>&nbsp;Services</span></h3>
         </div>
         <div class="service-container">
             <div class="service-card">
@@ -194,8 +194,8 @@
 
     <section class="projects">
         <div class="shadow-topic">
-            <h1>Services</h1>
-            <h3 class="topic-section" id="projects">My <span> Projects</span></h3>
+            <h1>Projects</h1>
+            <h3 class="topic-section" id="projects">My<span>&nbsp;Projects</span></h3>
         </div>
         <div class="project-list">
             <div class="project-card">
@@ -262,7 +262,7 @@
     <section class="assignments">
         <div class="shadow-topic">
             <h1>Assignments</h1>
-            <h3 class="topic-section" id="assignments">My <span>Assignments</span></h3>
+            <h3 class="topic-section" id="assignments">My<span>&nbsp;Assignments</span></h3>
         </div>
         <div class="assignment-container">
             <div class="assignment-card">
@@ -353,7 +353,7 @@
     <section class="contact">
         <div class="shadow-topic">
             <h1>Contact</h1>
-            <h3 class="topic-section" id="contact">Contact <span>Me</span></h3>
+            <h3 class="topic-section" id="contact">Contact<span>&nbsp;Me</span></h3>
         </div>
 
         <section class="contact-container">
