--- a/index.html
+++ b/index.html
@@ -326,29 +326,31 @@
     </section>
 
 
-<!--<main>
-    <section class="gallery">
-        <h3 class="topic-section" id="gallery">My <span>Gallery</span></h3>
 
+    <section class="gallery">
+        <div class="shadow-topic">
+            <h1>Memories</h1>
+            <h3 class="topic-section" id="gallery">My<span>&nbsp;Gallery</span></h3>
+        </div>
         <div class="gallery-container">
             <div class="column">
-                <img src="assets/images/image1.png"/>
-                <img src="assets/images/image2.png"/>
+                <img src="assets/images/gallery/image1.png"/>
+                <img src="assets/images/gallery/image2.png"/>
             </div>
             <div class="column">
-                <img src="assets/images/image2.png"/>
-                <img src="assets/images/image1.png"/>
-                <img src="assets/images/image3.jpg"/>
+                <img src="assets/images/gallery/image2.png"/>
+                <img src="assets/images/gallery/img.png"/>
+                <img src="assets/images/gallery/image3.jpg"/>
 
             </div>
             <div class="column">
-                <img src="assets/images/image2.png"/>
-                <img src="assets/images/image1.png"/>
+                <img src="assets/images/gallery/image5.jpg"/>
+                <img src="assets/images/gallery/image1.png"/>
             </div>
 
         </div>
     </section>
-</main>-->
+
 
     <section class="contact">
         <div class="shadow-topic">
