--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 
 
-    <section class="gallery">
+   <!-- <section class="gallery">
         <div class="shadow-topic">
             <h1>Memories</h1>
             <h3 class="topic-section" id="gallery">My<span>&nbsp;Gallery</span></h3>
@@ -347,9 +347,8 @@
                 <img src="assets/images/gallery/image5.jpg"/>
                 <img src="assets/images/gallery/image1.png"/>
             </div>
-
         </div>
-    </section>
+    </section>-->
 
 
     <section class="contact">
