--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <h4 class="skills-topic">Skills</h4>
             <div class="skills-container">
                 <div class="languages">
-                    <div><h4 class="skills-sub-topic">Languages</h4></div>
+                    <div><h4 class="skills-sub-topic">Languages<div></div></h4></div>
                     <div>
                         <img src="assets/images/skills/sql.png"/>
                         <img src="assets/images/skills/Python-logo-notext.svg.png"/>
@@ -374,7 +374,7 @@
             </div>
         </section>
     </section>
-    <footer><span>Anuki Dilara</span>@All Rights are Reserved</footer>
+    <footer>Copyright © 2023 <span>Anuki</span> | All Rights Reserved</footer>
 </main>
 
 
