--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="assets/normalize.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
+    <script src="assets/js/js.js"></script>
+
 </head>
 <body>
 
@@ -61,7 +63,7 @@
                 </a>
             </div>
             <div class="status">
-                <h3>I am a<br><span>Front-End Developer</span>
+                <h3>I am a<br><span class="auto-typed"></span>
                     <div class="line"></div>
                 </h3>
             </div>
@@ -377,6 +379,14 @@
     <footer>Copyright © 2023 <span>Anuki</span> | All Rights Reserved</footer>
 </main>
 
-
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<script>
+    var typed = new Typed(".auto-typed",{
+        strings: ["Front-End Developer","Graphic Designer"],
+        typeSpeed: 150,
+        backSped: 150,
+        loop: true
+    })
+</script>
 </body>
 </html>
