--- a/assignments.html
+++ b/assignments.html
@@ -166,6 +166,24 @@
                     </a>
                 </div>
             </div>
+            <div class="assignment-card">
+                <img src="assets/images/assignment-image.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 13</h4>
+                    <a href="assignments/JS/QUE/Case-01/index.html" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
+            </div>
+            <div class="assignment-card">
+                <img src="assets/images/assignment-image.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 14</h4>
+                    <a href="assignments/JS/QUE/Case-02/index.html" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
+            </div>
 
         </div>
     </section>
