--- a/assignments/JS/SPA/index.html
+++ b/assignments/JS/SPA/index.html
@@ -39,8 +39,8 @@
 
 <section id="dashboard">
     <div class="grid text-center d-inline-flex position-absolute">
-        <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5" style="width: 300px; height: 200px"><label></label>Customers</div>
-        <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5" style="width: 300px; height: 200px">Items</div>
+        <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4" style="width: 300px; height: 200px">Customers<label class="text-white"></label></div>
+        <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4" style="width: 300px; height: 200px">Items</div>
     </div>
     <img src="assets/images/pos-terminal-shop-ready-work.jpg" class="img-fluid " style="background-attachment: fixed; background-size: cover; background-position: center" alt="...">
 </section>
@@ -51,7 +51,8 @@
     <h2><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 20 20">
         <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7Zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216ZM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
     </svg> Manage Customers</h2>
-    <section class="container border border-4 rounded-5 p-3">
+    <hr class="border border-info border-2 opacity-50">
+    <section class="container border border-4 border-dark-subtle rounded-5 p-3 shadow-lg">
         <form>
             <div class="mb-3">
                 <input class="form-control" type="text" placeholder="ID" aria-label="default input example">
@@ -103,7 +104,8 @@
     <h2><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-box-seam-fill" viewBox="0 0 20 20">
         <path fill-rule="evenodd" d="M15.528 2.973a.75.75 0 0 1 .472.696v8.662a.75.75 0 0 1-.472.696l-7.25 2.9a.75.75 0 0 1-.557 0l-7.25-2.9A.75.75 0 0 1 0 12.331V3.669a.75.75 0 0 1 .471-.696L7.443.184l.01-.003.268-.108a.75.75 0 0 1 .558 0l.269.108.01.003 6.97 2.789ZM10.404 2 4.25 4.461 1.846 3.5 1 3.839v.4l6.5 2.6v7.922l.5.2.5-.2V6.84l6.5-2.6v-.4l-.846-.339L8 5.961 5.596 5l6.154-2.461L10.404 2Z"/>
     </svg> Manage Items</h2>
-    <section class="container border border-4 rounded-5 p-3">
+    <hr class="border border-info border-2 opacity-50">
+    <section class="container border border-4 border-dark-subtle rounded-5 p-3 shadow-lg p-3 mb-5 bg-body-tertiary rounded">
         <form>
             <div class="mb-3">
                 <input class="form-control" type="text" placeholder="ID" aria-label="default input example">
@@ -125,8 +127,12 @@
 </main>
 <!--------------------------------------------------------place order--------------------------------------->
 <main class="container p-2 justify-content-center" style="width: 100%" id="placeOrder">
-    <section class="container d-md-inline-flex gap-3 p-5">
-        <section class="container border border-4 rounded-5 p-2" >
+    <h2><svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-box-seam-fill" viewBox="0 0 20 20">
+        <path fill-rule="evenodd" d="M15.528 2.973a.75.75 0 0 1 .472.696v8.662a.75.75 0 0 1-.472.696l-7.25 2.9a.75.75 0 0 1-.557 0l-7.25-2.9A.75.75 0 0 1 0 12.331V3.669a.75.75 0 0 1 .471-.696L7.443.184l.01-.003.268-.108a.75.75 0 0 1 .558 0l.269.108.01.003 6.97 2.789ZM10.404 2 4.25 4.461 1.846 3.5 1 3.839v.4l6.5 2.6v7.922l.5.2.5-.2V6.84l6.5-2.6v-.4l-.846-.339L8 5.961 5.596 5l6.154-2.461L10.404 2Z"/>
+    </svg> Place Order</h2>
+    <hr class="border border-info border-2 opacity-50">
+    <section class="container d-md-inline-flex gap-3 p-2">
+        <section class="container border border-4 border-dark-subtle rounded-5 p-2" >
             <h4 class="bg-primary border rounded-5 p-2">Invoice Details</h4>
             <form class="p-2">
                 <div class="row p-2">
@@ -159,7 +165,7 @@
             </form>
         </section>
 
-        <section class="container border border-4 rounded-5 p-2">
+        <section class="container border border-4 border-dark-subtle rounded-5 p-2">
             <h4 class="bg-primary border rounded-5 p-2">Item Select</h4>
             <form class="p-2">
                 <div class="row p-2">
@@ -188,7 +194,7 @@
             </form>
         </section>
 
-        <section class="container border border-4 rounded-5 p-2">
+        <section class="container border border-4 border-dark-subtle rounded-5 p-2">
             <div class="p-3">
                 <div class="col p-2">
                     <div class="input-group">
@@ -221,7 +227,7 @@
         </section>
     </section>
     <section>
-        <table class="table table-success table-striped m-2 table-dark">
+        <table class="table table-success table-striped table-dark">
             <thead>
             <tr>
                 <th scope="col">Item Code</th>
