--- a/assignments/JS/SPA/index.html
+++ b/assignments/JS/SPA/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="assets/boostrap/css/bootstrap.min.css">
+    <style>
+        #navbarSupportedContent ul li a:hover{
+            color: #00cccc;
+        }
+    </style>
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-secondary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">POS System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
                     <li class="nav-item" id="lnkHome">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -42,7 +47,7 @@
         <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4" style="width: 300px; height: 200px">Customers<label class="text-white"></label></div>
         <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4" style="width: 300px; height: 200px">Items</div>
     </div>
-    <img src="assets/images/pos-terminal-shop-ready-work.jpg" class="img-fluid " style="background-attachment: fixed; background-size: cover; background-position: center" alt="...">
+    <!--<img src="assets/images/pos-terminal-shop-ready-work.jpg" class="img-fluid " style="background-attachment: fixed; background-size: cover; background-position: center" alt="...">-->
 </section>
 
 <!--------------------------------------------------------customer--------------------------------------->
