--- a/assignments/JS/SPA/index.html
+++ b/assignments/JS/SPA/index.html
@@ -42,13 +42,15 @@
     </nav>
 </header>
 
-<section class="container d-md-inline-flex" id="dashboard">
-    <div class="col-xl-6 text-center">
-        <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4" style="width: 300px; height: 200px">Customers<label class="text-white"></label></div>
-        <div class="g-col-6 border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4" style="width: 300px; height: 200px">Items</div>
-    </div>
-    <div class="col-xl-6 m-5 border rounded-5">
-        <img src="assets/images/pos-terminal-shop-ready-work.jpg" class="img-thumbnail border rounded-5" alt="...">
+<section class="container " id="dashboard">
+    <div class="row">
+        <div class="col-xl-6">
+            <div class=" border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4 text-center" style="width: 300px; height: 200px">Customers<label class="text-white"></label></div>
+            <div class=" border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4 text-center" style="width: 300px; height: 200px">Items</div>
+        </div>
+        <div class="col-xl-6">
+            <img src="assets/images/pos-terminal-shop-ready-work.jpg" class="img-thumbnail border rounded-5 m-5" alt="...">
+        </div>
     </div>
 </section>
 
