--- a/assignments/JS/SPA/index.html
+++ b/assignments/JS/SPA/index.html
@@ -14,7 +14,7 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">AD POS System</a>
+            <a class="navbar-brand  fw-bolder text-info" href="#">AD POS System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
