--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <section class="about-description">
                     <!-- My Details -->
-                    <h2>Hi There,I'm<span class="auto-type"></span></h2>
+                    <h2>Hi There, I'm Anuki Dilara</h2>
                     <p>I am tyring to be a UI/UX designer.I’m currently studying Graduate Diploma in Software Engineering (GDSE) in Institute of Software Engineering (IJSE). I,m currently working on Web Designing.
                         And I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
 
@@ -100,7 +100,7 @@
                         to learn new technologies and apply them to solve complex problems.</p>
 
                     <button>Download CV
-                        <a href="./assets/pdf/DILSHAN_DEKUMPITIYA_CV.pdf" target="_blank">
+                        <a href="./assets/CV/test.txt" target="_blank">
                             <i class="fa-solid fa-download" style="color: white"></i>
                         </a>
                     </button>
@@ -388,12 +388,6 @@
         loop: true
     })
 
-    var type = new Type(".auto-type",{
-        strings: ["Anuki Dilara","Anuki Dilara"],
-        typeSpeed: 150,
-        backSped: 150,
-        loop: true
-    })
 </script>
 </body>
 </html>
